--- a/config/locales/views/properties/ca.yml
+++ b/config/locales/views/properties/ca.yml
@@ -30,4 +30,11 @@ ca:
       trend: Tendència
       unknown: Desconegut
       year_built: Any de construcció
-
+    tabs:
+      overview:
+        living_area: Superfície habitable
+        market_value: Valor de mercat
+        purchase_price: Preu de compra
+        trend: Tendència
+        unknown: Desconegut
+        year_built: Any de construcció
