Add `investment_activity_label` to trades and enhance activity label handling
- Introduced `investment_activity_label` column to the `trades` table with a migration.
- Backfilled existing `trades` with activity labels based on quantity (`Buy`, `Sell`, or `Other`).
- Replaced `category_id` in trades with `investment_activity_label` for better alignment with transaction labels.
- Updated views and controllers to display and manage activity labels for trades.
- Added localized badge components for displaying and editing labels dynamically.
- Enhanced `PlaidAccount::Investments::TransactionsProcessor` to assign and process activity labels automatically.
- Added investment flows section to reports for tracking contributions and withdrawals.
- Refactored related tests and models for consistency and to ensure proper validation and filtering.

--- a/config/locales/views/reports/en.yml
+++ b/config/locales/views/reports/en.yml
@@ -134,6 +134,12 @@ en:
       value: Value
       return: Return
       accounts: Investment Accounts
+    investment_flows:
+      title: Investment Flows
+      description: Track money flowing into and out of your investment accounts
+      contributions: Contributions
+      withdrawals: Withdrawals
+      net_flow: Net Flow
     google_sheets_instructions:
       title_with_key: "✅ Copy URL for Google Sheets"
       title_no_key: "⚠️ API Key Required"
