--- a/config/locales/views/accounts/ca.yml
+++ b/config/locales/views/accounts/ca.yml
@@ -3,7 +3,7 @@ ca:
   account:
     entries:
       destroy:
-        success: Sortida
+        success: Èxit
   accounts:
     account:
       link_lunchflow: Enllaça amb Lunch Flow
