--- a/config/locales/views/oidc_accounts/ca.yml
+++ b/config/locales/views/oidc_accounts/ca.yml
@@ -2,21 +2,4 @@
 ca:
   oidc_accounts:
     link:
-      account_creation_disabled: La creació de comptes nous mitjançant inici de sessió únic està inhabilitada.
-        Contacta amb un administrador per crear el teu compte.
-      cancel: Cancel·la
-      create_account: Crea compte
-      create_new_account: Crea nou compte
-      email: Correu electrònic
-      enter_email: Introdueix el teu correu electrònic
-      enter_password: Introdueix la teva contrasenya
-      header:
-        create_account: Crea compte
-        link_oidc_account: Enllaça compte OIDC
-      link_account: Enllaça compte
-      password: Contrasenya
-      title: Verifica la teva identitat
-      verify_identity: Verifica la teva identitat
-      verify_identity_description: Per enllaçar el teu compte de <%= @pending_auth["provider"] %> <% if @pending_auth["email"].present? %> (<%= @pending_auth["email"] %>)<% end %>,
-        verifica la teva identitat introduint la teva contrasenya.
-      verify_identity_help: Això ajuda assegurar que només tu puguis enllaçar comptes externs al teu perfil.
+      account_creation_disabled: La creació de comptes nous mitjançant inici de sessió únic està inhabilitada. Contacta amb un administrador per crear el teu compte.
