Fix breadcrumb i18n and Escape hotkey conflict
- Store breadcrumb labels as i18n symbols, resolve in view after locale is set
- Add breadcrumb translations for EN and FR
- Remove Escape hotkey from settings nav to fix dialog interference

--- a/config/locales/views/shared/en.yml
+++ b/config/locales/views/shared/en.yml
@@ -1,5 +1,17 @@
 ---
 en:
+  breadcrumbs:
+    home: Home
+    dashboard: Dashboard
+    accounts: Accounts
+    merchants: Merchants
+    categories: Categories
+    tags: Tags
+    rules: Rules
+    transactions: Transactions
+    budgets: Budgets
+    imports: Imports
+    chats: Assistant
   shared:
     confirm_modal:
       accept: Confirm
