i18n: Extract more hardcoded strings
- imports/_importing, _success, _failure: status messages
- transactions/show: additional details, transfer section

--- a/config/locales/views/imports/en.yml
+++ b/config/locales/views/imports/en.yml
@@ -105,3 +105,16 @@ en:
       description: Here's a summary of the new items that will be added to your account
         once you publish this import.
       title: Confirm your import data
+    importing:
+      title: Import in progress
+      message: Your import is in progress. Check the imports menu for status updates or click 'Check Status' to refresh the page for updates. Feel free to continue using the app.
+      check_status: Check status
+      back_to_dashboard: Back to dashboard
+    success:
+      title: Import successful
+      message: Your imported data has been successfully added to the app and is now ready for use.
+      back_to_dashboard: Back to dashboard
+    failure:
+      title: Import failed
+      message: Please check that your file format, for any errors and that all required fields are filled, then come back and try again.
+      try_again: Try again
