Extract hardcoded strings from ERB views to i18n
- Translate text in categories, chats, rules, tags, subscriptions views
- Add i18n keys to transaction filters (account, merchant, tag, category, date)
- Update search form with translation keys
- Create family_merchants locale file
- Update chats locale with error, chat, chat_nav keys
- Add rules index keys (title, delete_all, sort, empty states)

--- a/config/locales/views/categories/en.yml
+++ b/config/locales/views/categories/en.yml
@@ -19,6 +19,7 @@ en:
       categories: Categories
       categories_expenses: Expense categories
       categories_incomes: Income categories
+      delete_all: Delete all
       empty: No categories found
       new: New category
     menu:
