--- a/config/locales/views/accounts/en.yml
+++ b/config/locales/views/accounts/en.yml
@@ -6,6 +6,8 @@ en:
       link_provider: Link with provider
       unlink_provider: Unlink from provider
       troubleshoot: Troubleshoot
+      deletion_in_progress: deletion in progress...
+      complete_setup: Complete setup
     chart:
       data_not_available: Data not available for the selected period
     create:
@@ -76,7 +78,8 @@ en:
           the account information because you'll need to add it as a new account.</p>"
         confirm_title: Delete account?
         edit: Edit
-        import: Import transactions
+        import_transactions: Import transactions
+        delete_account: Delete account
         manage: Manage accounts
     update:
       success: "%{type} account updated"
