Extract more hardcoded strings to i18n (3)
- Add i18n keys for layouts/application (trial banner)
- Add i18n keys for onboardings/_logout
- Add i18n keys for settings/billings/show
- Create layouts locale file

--- a/config/locales/views/onboardings/en.yml
+++ b/config/locales/views/onboardings/en.yml
@@ -3,6 +3,8 @@ en:
   onboardings:
     header:
       sign_out: Log out
+    logout:
+      sign_out: Sign out
     preferences:
       currency: Currency
       date_format: Date format
