Extract hardcoded strings from budgets and accounts
- Add i18n keys for budgets/_budget_header
- Add i18n keys for budgets/_budget_donut
- Add i18n keys for accounts/show/_header

--- a/config/locales/views/accounts/en.yml
+++ b/config/locales/views/accounts/en.yml
@@ -49,6 +49,8 @@ en:
         title: How would you like to add it?
       title: What would you like to add?
     show:
+      header:
+        complete_setup: Complete setup
       activity:
         amount: Amount
         balance: Balance
