Extract hardcoded strings from confirm dialog and rules form
- Add i18n keys for layouts/shared/_confirm_dialog
- Add i18n keys for rules/_form (name, conditions, actions)

--- a/config/locales/views/layouts/en.yml
+++ b/config/locales/views/layouts/en.yml
@@ -5,3 +5,8 @@ en:
       free_trial: Free trial
       days_remaining: "%{days} days remaining"
       upgrade: Upgrade
+    shared:
+      confirm_dialog:
+        default_title: Are you sure?
+        default_subtitle: This action cannot be undone.
+        confirm: Confirm
