Extract hardcoded strings from provider views to i18n
- SimpleFIN items: edit, setup_accounts, select_existing_account, _simplefin_item, _subtype_select
- Enable Banking items: new, setup_accounts, select_existing_account, _enable_banking_item
- Budget categories: _no_categories, _confirm_button, show
- Accounts: show/_activity

--- a/config/locales/views/accounts/en.yml
+++ b/config/locales/views/accounts/en.yml
@@ -52,6 +52,10 @@ en:
       header:
         complete_setup: Complete setup
       activity:
+        new: New
+        new_balance: New balance
+        new_transaction: New transaction
+        search_placeholder: Search entries by name
         amount: Amount
         balance: Balance
         confirmed: Confirmed
